<resources>
    <string name="app_name">eLibrary</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_library">Library</string>
    <string name="search_title">find</string>
    <string name="search_hint">find</string>


    <string name="new_library">New</string>
    <string name="Recomonded_library">Recomond</string>
    <string name="Top_library">Top</string>

    <string name="ruquest">Ruquests</string>
    <string name="suggestions">Suggest for you</string>

    <string name="title_book_request">Request book</string>
    <string name="add_new_book">Add new book</string>

<!--    add book -->
    <string name="book_name">NAME</string>
    <string name="author">AUTHOR</string>
    <string name="category">CATEGORY</string>
    <string name="language">LANGUAGE</string>

</resources>